--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,6 @@ python:
 env:
   - DJANGO=1.7.7
 install:
-  - pip install -q requirements.txt
+  - pip install -q Django==$DJANGO --use-mirrors
 script:
   - python setup.py test
