--- a/.travis.yml
+++ b/.travis.yml
@@ -9,4 +9,4 @@ install:
 script:
   - coverage run --source=example_project setup.py test
 after_success:
-  - coveralls --exclude manage.py --exclude example_project
+  - coveralls
