--- a/.travis.yml
+++ b/.travis.yml
@@ -2,9 +2,9 @@ language: python
 python:
   - "2.7"
 env:
-  - DJANGO=1.7.7
+  - DJANGO_VERSION=1.7.7
 install:
-  - pip install -q Django==$DJANGO --use-mirrors
+  - pip install -q Django==$DJANGO_VERSION
   - pip install coveralls
 script:
   - coverage run --source=example_project setup.py test
