--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: python
 python:
   - "2.7"
 env:
-  - DJANGO_VERSION=1.7.7
+  - DJANGO_VERSION>=1.7.7
 install:
   - pip install -q Django==$DJANGO_VERSION
   - pip install coveralls
