--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,7 @@ python:
   - "2.7"
 env:
   - DJANGO_VERSION=1.7.7
+  - DJANGO_VERSION=1.8.2
 install:
   - pip install -q django==$DJANGO_VERSION
   - pip install coveralls
